fix code scrollbar

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -43,7 +43,7 @@ header.headline small {
 pre {
     margin: 2em 0;
     max-width: 100%;
-    overflow-y: scroll;
+    overflow-x: auto;
 }
 
 code {
